fix: bug spacing between cells

--- a/src/index.scss
+++ b/src/index.scss
@@ -356,6 +356,7 @@ aside {
     box-sizing: border-box;
     height: 100%;
     min-width: 100%;
+    justify-content: center;
 
     .cell-diagram {
       display: flex;
@@ -366,7 +367,6 @@ aside {
       flex-wrap: wrap;
       height: 100%;
       width: max-content;
-      min-width: 100%;
     }
   }
 }
